opam-version: "2.0"

name:         "teash"
version:      "0.1.0"
synopsis:     "TEA for the shell"
description: """
A library for developing shell/terminal applications using an
interpretation of The Elm Architecture.
"""
maintainer:   "neochrome <johan@stenqvist.net>"
authors:      "neochrome <johan@stenqvist.net>"
homepage:     "https://github.com/neochrome/teash"
bug-reports:  "https://github.com/neochrome/teash/issues"
dev-repo:     "git+https://github.com/neochrome/teash.git"
license:      "Unlicense"

build: [
	[make "build"]
]

depends: [
	"ocaml" {>= "4.03" & < "4.08.0"}
	"dune" {build}
	"lwt" {>= "3.2.1"}
	"lwt_ppx" {build & >= "1.2.1"}
	"notty" {>= "0.2.1"}
	"odoc" {build}
]
